[package]
name = "grisly"
version = "0.0.4"
edition = "2021"

[lib]
name = "grisly"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "*" }
pyo3 = { version = "*", features = ["extension-module"] }
pyo3-polars = { version = "*", features = ["derive", "lazy"] }
serde = { version = "*", features = ["derive"] }
unicode-normalization = "0.1.22"
